# nonebot_plugin_eventmonitor

./: LICENSE  README.md  admin.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  pypi-publish.yml  python-package.yml  release.yml  ruff.yml  testpypi-publish.yml
nonebot_plugin_eventmonitor/: __init__.py  admin.py  chuo_message.py  config.py  handle.py  honour.py  matcher.py  rongyu.py  stamp.py  txt2img.py  update.py  utils.py
nonebot_plugin_monitor/: chuoyichuo.py
tests/: __init__.py  conftest.py  test_event.py  test_init.py
