[tool.poetry]
name = "nonebot-plugin-eventmonitor"
version = "0.4.0"
description = "监控群事件的插件，支持戳一戳，成员变动，群荣誉，运气王变化等提示"
license = "MIT"
authors = ["Reversedeer"]
readme = "README.md"
homepage = "https://github.com/Reversedeer/nonebot_plugin_eventmonitor"
repository = "https://github.com/Reversedeer/nonebot_plugin_eventmonitor"

[tool.poetry.dependencies]
python = "^3.9"
httpx = { version = ">=0.26.0,<1.0.0", extras = ["http2"], optional = true }
pillow = ">=9.4.0"
nonebot2 = "^2.2.0"
nonebot-adapter-onebot = ">=2.1.3"
nonebot-plugin-apscheduler = ">=0.1.3"
pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1,!=2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"