[tool.poetry]
name = "nonebot-plugin-eventmonitor"
version = "0.4.2"
description = "监控群事件的插件，支持戳一戳，成员变动，群荣誉，运气王变化等提示"
license = "MIT"
authors = ["Reversedeer"]
readme = "README.md"
homepage = "https://github.com/Reversedeer/nonebot_plugin_eventmonitor"
repository = "https://github.com/Reversedeer/nonebot_plugin_eventmonitor"

[tool.poetry.dependencies]
python = "^3.9"
pillow = ">=9.4.0"
nonebot2 = { version = ">=2.2.0", extras = ["fastapi"] }
nonebot-adapter-onebot = ">=2.1.3"
nonebot-plugin-apscheduler = ">=0.1.3"
pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1,!=2.10.0"
httpx = { version = ">=0.26.0,<1.0.0", extras = ["http2"], optional = true }

[tool.poetry.extras]
httpx = ["httpx"]
fastapi = ["nonebot2"]

[tool.poetry.group.dev.dependencies]
nonebug = "^0.4.0"
pytest = "^7.0"
flake8 = "^6.0"


[tool.poetry.group.test.dependencies]
nonebug = "^0.4.3"
anyio = "^4.8.0"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"